<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NYC Adventure Generator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="consumer_key">j70zwvMJOtVele0PZesByA</string>
    <string name="consumer_secret">_UB1U6CVBwyMgbX_TxjvjeN3toc</string>
    <string name="token">h1jYhtSLoqFNX49nvJbs_WnNRbPUhrJe</string>
    <string name="token_secret">lSC1uwU--gC0b1sAVaZcLkGQiBE</string>
    <string name="parks">Parks</string>
    <string name="museums">Museums</string>
    <string name="shopping">Shopping</string>
    <string name="monuments">Monuments</string>
    <string name="public_transportation">Public transportation</string>
    <string name="bars">Bars</string>
    <string name="start">Create Adventures!</string>
    <string name="audible_button">Redo</string>
    <string name="accept_button">Start</string>
    <string name="text_direction">Turn right on W 185 St</string>
    <string name="text_direction_info">0.2 mi</string>

</resources>