<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/index_header4"
            android:scaleType="centerCrop"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="#FFF"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="#FFF"
                android:orientation="horizontal">

                <TextView android:id="@+id/text_park"
                    android:text="@string/parks"
                    style="@style/index_text"/>

                <CheckBox android:id="@+id/checkbox_parks"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#CCC"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="#FFF"
                android:orientation="horizontal">

                <TextView android:id="@+id/text_museums"
                    android:text="@string/museums"
                    style="@style/index_text"/>

                <CheckBox android:id="@+id/checkbox_museums"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#CCC"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="#FFF"
                android:orientation="horizontal">

                <TextView android:id="@+id/text_shopping"
                    android:text="@string/shopping"
                    style="@style/index_text"/>

                <CheckBox android:id="@+id/checkbox_shopping"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#CCC"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="#FFF"
                android:orientation="horizontal">

                <TextView android:id="@+id/text_monuments"
                    android:text="@string/monuments"
                    style="@style/index_text"/>

                <CheckBox android:id="@+id/checkbox_monuments"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#CCC"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="#FFF"
                android:orientation="horizontal">

                <TextView android:id="@+id/text_bars"
                    android:text="@string/bars"
                    style="@style/index_text"/>

                <CheckBox android:id="@+id/checkbox_bars"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#CCC"/>

        </LinearLayout>

    </LinearLayout>

    <Button android:id="@+id/button_main"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#9dbed7"
        android:text="@string/start"
        android:textSize="24sp"
        android:textColor="#FFF"/>

</RelativeLayout>